# claude-code-telegram-bridge

./: .gitignore  CLAUDE.md  README.md  install.sh  monitor-claude.sh  pyproject.toml  uninstall.sh
cctg/: __init__.py  __main__.py  cleanup.py  cli.py  config.py  daemon.py  db.py  pty_bridge.py  session_manager.py  telegram_handler.py  transcript_watcher.py  tty_router.py
hooks/: notify.py  session.py  stop.py
tests/: __init__.py  conftest.py  test_cleanup.py  test_config.py  test_daemon.py  test_db.py  test_hooks.py  test_integration.py  test_pty_bridge.py  test_session_manager.py  test_telegram_handler.py  test_transcript_watcher.py  test_tty_router.py
